tests/build/impl_ui_node/delegate_expr_error_incorrect_type_child.stderr
error[E0277]: the trait bound `NotANode: UiNode` is not satisfied
   --> $DIR/delegate_expr_error_incorrect_type_child.rs:9:16
    |
9   | #[impl_ui_node(child)]
    |                ^^^^^ the trait `UiNode` is not implemented for `NotANode`
    |
note: required by a bound in `delegate_mut`
   --> $DIR/ui_node.rs:514:28
    |
514 |     pub fn delegate_mut<U: UiNode + ?Sized>(d: &mut U) -> &mut U {
    |                            ^^^^^^ required by this bound in `delegate_mut`

error[E0277]: the trait bound `NotANode: UiNode` is not satisfied
   --> $DIR/delegate_expr_error_incorrect_type_child.rs:9:16
    |
9   | #[impl_ui_node(child)]
    |                ^^^^^ the trait `UiNode` is not implemented for `NotANode`
    |
note: required by a bound in `delegate`
   --> $DIR/ui_node.rs:510:24
    |
510 |     pub fn delegate<U: UiNode + ?Sized>(d: &U) -> &U {
    |                        ^^^^^^ required by this bound in `delegate`
